<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txvIntoduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/introduction" />

    <TextView
        android:id="@+id/txvLoginProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/loginProcess" />

    <TextView
        android:id="@+id/txvComplaintRegistrationProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/complaintRegistrationProcess" />

    <TextView
        android:id="@+id/txvChangePasswordProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/changePasswordProcess" />

    <TextView
        android:id="@+id/txvCityInformationProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/cityInformationProcess" />
</LinearLayout>