<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/fname"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/lname"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/pass"
                android:padding="15dp"
                android:password="true"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/confirmPassword"
                android:padding="15dp"
                android:password="true"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:editable="false"
                    android:hint="Birthday"
                    android:padding="15dp"
                    android:textColorHint="#000"
                    android:textSize="18dp" />

                <ImageButton
                    android:id="@+id/imgDOB"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:background="@null"
                    android:contentDescription="selectdate"
                    android:src="@drawable/calender_icon" />

            </LinearLayout>


            <EditText
                android:id="@+id/edtMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:hint="Mobile No"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/chkAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text=" I Agree"
                android:textColor="#000"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/buttonhome"
                    android:onClick="onClick"
                    android:padding="15dp"
                    android:text="Cancle"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/buttonhome"
                    android:onClick="onClick"
                    android:padding="15dp"
                    android:text="Sign Up"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>