<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/homescreenimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:src="@drawable/smartcitylogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_mob"
                    android:hint="Mobile No"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColorHint="#000"
                    android:textSize="19dp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.8"
                    android:drawableLeft="@drawable/ic_pwd"
                    android:hint="Password"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:password="true"
                    android:textColorHint="#000"
                    android:textSize="19dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/chkShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/showpwd"
                    android:textColor="@color/Teal"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="5dp"
                    android:onClick="onClick"
                    android:text="@string/forgotpassword"
                    android:textColor="@color/Teal"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/buttonhome"
                    android:onClick="onClick"
                    android:text="@string/signup"
                    android:textColor="#FFFFFF"
                    android:textSize="25dp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/buttonhome"
                    android:onClick="onClick"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="25dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>