<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ui.WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/wetherback"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50px"
                android:paddingLeft="5dp"
                android:text="30ºC"
                android:textColor="#060606"
                android:textSize="50dp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@string/condition_icon"
                android:padding="10dp"
                android:src="@drawable/wetherback" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#060606"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/conditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/condition"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/RED"
                android:textSize="25dp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/weatherImageView"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginLeft="40dp"
                android:contentDescription="@string/condition_icon"
                android:padding="10dp"
                android:src="@drawable/sunny" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/swachindia" />
    </LinearLayout>


</LinearLayout>